feat: merge original repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#Exclude potential (c) training data
+*_lyrics.txt
+*.mp3
+AlbumArt*.jpg
+Folder.jpg
+
+
 data/
 *.mp3
 *.wav
@@ -229,3 +236,5 @@ checkpoints_pack/
 issues/
 PortableGit/
 proxy_config.txt
+gradio_outputs/
+acestep/third_parts/vllm/
